Habilidades en PerfilPublico
Ahora se muestran las habilidades ofrecidas y necesitadas en los perfiles publicos de los usuarios